# rust-vanity

./: Cargo.toml  DEPLOY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.txt  README.md  README_GPU.md  TECHNICAL.md  USAGE.md  build.rs  run_multi_pattern.sh  run_search.sh  run_simple.sh
src/: api.rs  benchmark.rs  cuda_bench.rs  cuda_helpers.rs  estimator.rs  main.rs
src/cuda/: mod.rs  vanity_generator.rs  vanity_kernel.cu
