[package]
name = "solana-vanity"
version = "1.0.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
bs58 = "0.5"
rayon = "1.10"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
num_cpus = "1.16"
parking_lot = "0.12"
crossbeam = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1