[package]
name = "vanity-grinder"
version = "0.1.0"
edition = "2021"
description = "A high-performance tool for generating Solana vanity addresses using GPU acceleration"

[dependencies]
# Core dependencies
ed25519-dalek = "1.0.1"
rand = "0.8.5"
solana-sdk = "1.16.0"
clap = { version = "4.3", features = ["derive"] }
num_cpus = "1.16.0"
colored = "2.0.0"  # Terminal colors
chrono = { version = "0.4.24", features = ["serde"] }  # For timestamps in filenames
serde = { version = "1.0.159", features = ["derive"] }  # For serializing keypairs
serde_json = "1.0.95"  # For saving keypairs to JSON

# Using CUDA-sys directly for maximum performance
cuda-runtime-sys = { version = "0.3.0-alpha.1" }
cuda-driver-sys = "0.3.0"

# REST API dependencies
actix-web = "4.3.1"
actix-cors = "0.6.4"
tokio = { version = "1.28.1", features = ["full"] }
env_logger = "0.10.0"
log = "0.4.17"
futures = "0.3.28"
uuid = { version = "1.3.2", features = ["v4", "serde"] }
reqwest = { version = "0.11.18", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true