[package]
name = "vanity-grinder"
version = "0.1.0"
edition = "2021"
description = "GPU-accelerated Solana pump address generator"

[dependencies]
solana-sdk = "1.16.0"
rand = "0.8.5"
colored = "2.0.0"
bs58 = "0.5.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
serde_json = "1.0.95"
chrono = { version = "0.4.24", features = ["serde"] }
tokio = { version = "1.28.1", features = ["full"] }
log = "0.4.17"
env_logger = "0.10.0"

# For modular organization
cuda-driver-sys = "0.3.0"
cuda-runtime-sys = { version = "0.3.0-alpha.1" }

[profile.release]
opt-level = 3
lto = true
strip = true
